add_executable(tut1 tut1.cpp)
target_link_libraries(tut1 ${Boost_LIBRARIES})

add_executable(tut2 tut2.cpp)
target_link_libraries(tut2 ${Boost_LIBRARIES})

add_executable(tut3 tut3.cpp)
target_link_libraries(tut3 ${Boost_LIBRARIES})

add_executable(tut4 tut4.cpp)
target_link_libraries(tut4 ${Boost_LIBRARIES})

add_executable(tut5 tut5.cpp)
target_link_libraries(tut5 ${Boost_LIBRARIES})

add_executable(path_info path_info.cpp)
target_link_libraries(path_info ${Boost_LIBRARIES})

add_executable(mytest01 mytest01.cpp)
target_link_libraries(mytest01 ${Boost_LIBRARIES})
