cmake_minimum_required(VERSION 2.6)

project(tiny_xml_examples)

#set(CMAKE_CXX_FLAGS "-g -std=c++0x -Wall -Wextra -Weffc++ -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wabi -Wmissing-declarations -Wconversion -Wcast-align -Wredundant-decls -Werror -Werror -pedantic")

add_subdirectory(tutorial)
add_subdirectory(xmltest)
